Reetan.Nayak Dev 25/force-app/main/default/objects/FacebookApp__c/FacebookApp__c.object-meta.xml
<CustomObject>
    <label>FacebookApp</label>
    <nameField>
        <label>FacebookApp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FacebookApps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>