Reetan.Nayak Dev 25/force-app/main/default/objects/FacebookApp__c/fields/clientID__c.field-meta.xml
<CustomField>
    <fullName>clientID__c</fullName>
    <inlineHelpText>Also know as the Application ID</inlineHelpText>
    <label>clientID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>