Reetan.Nayak Dev 25/force-app/main/default/objects/FacebookApp__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <inlineHelpText>Also known as Application Secret</inlineHelpText>
    <label>clientSecret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>