Reetan.Nayak Dev 25/force-app/main/default/objects/FacebookApp__c/fields/extendedPermissions__c.field-meta.xml
<CustomField>
    <fullName>extendedPermissions__c</fullName>
    <inlineHelpText>When a Facebook user authorizes your application, your application gets access to the user. By default, your application can access all public data in a user&apos;s profile. If you need to access other parts of the profile you must request extended permissions</inlineHelpText>
    <label>Extended Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>